<!--
  ~ Copyright (c) 2019, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
  ~
  ~ WSO2 Inc. licenses this file to you under the Apache License,
  ~ Version 2.0 (the "License"); you may not use this file except
  ~ in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing,
  ~ software distributed under the License is distributed on an
  ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  ~ KIND, either express or implied. See the License for the
  ~ specific language governing permissions and limitations
  ~ under the License.
  -->

<resources>
    <string name="app_name">HT Mobile App</string>
    <string name="app_name_welcome">HT Mobile App xin chào !</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="sign_up">Đăng ký</string>
    <string name="logged_out">Successfully Logged Out!</string>
    <string name="welcome">Xin chào!</string>
    <string name="test">Admin</string>
    <string name="username">Username</string>
    <string name="sign_out">Đăng xuất</string>
    <string name="sign_out_sso">Đăng xuất SSO</string>
    <string name="wso2_logo">WSO2 Logo</string>
    <string name="user_image">User Image</string>
    <string name="language">Tiếng Việt</string>
    <string name="vietnam_txt">Việt</string>
    <string name="english_txt">EN</string>
    <string name="copyright">Copyright \u00A9 Hưng Thịnh Corp 2021</string>

</resources>
